tests/cases/fail/string_method_arg_type.p4
def main() -> None:
    value = "compiler"
    print(value.starts_with(1))
